# trip_planner

./: pyproject.toml  trip_planner.db
scripts/: addsome.sh  cleanup.sh  correctsome.sh  enlist.sh  genmap.sh  prepare.sh  runapp.sh  runtest.sh  showcase.sh  showmap.sh  showsql.sh
trip_planner/: __init__.py  __main__.py  cli.py  database.py  datastructs.py  geolocation.py  helpers.py  importer.py  map_generator.py  models.py  queries.py  settings.py  tests.py  utils.py  webapp.py
trip_planner/data/: places.txt
trip_planner/static/: index.js
trip_planner/templates/: index.tpl  trip_map.html
trip_planner/views/: index.tpl  trip_map.html
