[tool.poetry]
name = "trip_planner"
version = "0.1.0"
description = "A CLI-based tool to assist travelers in planning and organizing their trip destinations, complete with geolocation data."
authors = ["Maniak Root <maniakroot@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
geopy = "^2.3.0"
folium = "^0.14.0"
bottle = "^0.12.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
